@@ -56,6 +56,7 @@ RunOnStartup =
 	"PriceMatchers/SelfMatcher.lua",
 	"PriceMatchers/Vendor.lua",
 	"AuctionSearchers/Basic.lua",
+	"AuctionSearchers/Extended.lua",
 	"AuctionSearchers/Vendor.lua",
 	"SearchFrame.lua",
 	"PostingFrame.lua",
